[package]
name = "c2_offload_engagements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = { version = "1.28.1", features = ["full"] }
actix-web = "4"
rand = "0.8.5"
futures = "0.3.28"
zip = "0.6.6"