[package]
name = "offload_engagements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version  = "1.0.163", features = ["derive"] }
which = "4.4.0"
reqwest = "0.11.18"
urlencoding = "2.1.2"
zip = "0.6.6"
walkdir = "2.3.3"
tokio = { version = "1.28.1", features = ["full"] }
futures = "0.3.28"
